# object_recognition

./: CMakeLists.txt  package.xml
config/: object_orientation.yaml
include/: ObjectListener.h
launch/: find_object_3d.launch  find_object_3d_gui.launch
settings/: object_recognition.ini
src/: ObjectListener.cpp
